[tool.poetry]
name = "moneyflow-payment-composer-api"
version = "0.1.0"
description = "MoneyFlow Payment Composer API"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
factory-boy = "^3.3.0"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
faker = "^21.0.0"
psycopg2 = "^2.9.9"
pytest-env = "^1.1.3"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest_env]
POSTGRES_DSN = {value = "postgresql+asyncpg://postgres:moneyflow@postgres:5432/test_db", skip_if_set = true}
