[tool.poetry]
name = "moneyflow-payment-router"
version = "0.1.0"
description = "MoneyFlow Payment Router"
authors = ["Willian Morais <williandmorais@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pika = "^1.3.2"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
faker = "^21.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.isort]
known-first-party = ["app"]
